--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-APP_CDN_URL=https://example.cloudfront.net/
-API_BASE_URL=http://localhost:3333
-API_ENV=dev
+NUXT_APP_CDN_URL=https://example.cloudfront.net
+NUXT_PUBLIC_API_BASE=http://localhost:3333
+NUXT_PUBLIC_API_ENV=dev
