--- a/package.json
+++ b/package.json
@@ -11,14 +11,33 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
-    "nuxt": "^3.6.1"
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nuxt": "^3.6.1",
+    "prettier": "^2.8.8",
+    "sass": "^1.63.6",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "@pinia/nuxt": "^0.4.11",
+    "@types/inputmask": "^5.0.3",
+    "@vee-validate/rules": "^4.10.5",
+    "@vee-validate/yup": "^4.10.5",
+    "inputmask": "^5.0.8",
+    "pinia": "^2.1.4",
+    "vee-validate": "^4.10.5",
+    "vuetify": "^3.3.6",
+    "yup": "^1.2.0"
   },
   "engines": {
     "npm": ">=9.0.0",
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
