--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/node": "^18",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -27,8 +29,10 @@
     "@types/inputmask": "^5.0.3",
     "@vee-validate/rules": "^4.10.5",
     "@vee-validate/yup": "^4.10.5",
+    "date-fns": "^2.30.0",
     "inputmask": "^5.0.8",
     "pinia": "^2.1.4",
+    "uuid": "^9.0.0",
     "vee-validate": "^4.10.5",
     "vuetify": "^3.3.6",
     "yup": "^1.2.0"
