--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nuxt": "^3.6.1",
     "prettier": "^2.8.8",
     "sass": "^1.63.6",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-plugin-vuetify": "^1.0.2"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
