--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "start": "nuxt start",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "rm -rf node_modules/.cache/storybook && storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
-    "@storybook/addon-essentials": "^7.0.26",
-    "@storybook/addon-interactions": "^7.0.26",
-    "@storybook/addon-links": "^7.0.26",
-    "@storybook/blocks": "^7.0.26",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@storybook/vue3": "^7.0.26",
-    "@storybook/vue3-vite": "^7.0.26",
+    "@storybook/addon-essentials": "^7.0.27",
+    "@storybook/addon-interactions": "^7.0.27",
+    "@storybook/addon-links": "^7.0.27",
+    "@storybook/addon-mdx-gfm": "^7.0.27",
+    "@storybook/blocks": "^7.0.27",
+    "@storybook/testing-library": "^0.2.0",
+    "@storybook/vue3": "^7.0.27",
+    "@storybook/vue3-vite": "^7.0.27",
     "@types/node": "^18",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^5.61.0",
@@ -34,7 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.63.6",
-    "storybook": "^7.0.26",
+    "storybook": "^7.0.27",
     "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
